# SATP

./: CMakeLists.txt  README.md
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
Documents/: SATP Specification.docx  SATP Summary.docx
Source/: SATP.sln
Source/Client/: SATP Client.vcxproj  appclt.c  appclt.h
Source/SATP/: SATP.vcxproj  SATP.vcxproj.filters  client.c  client.h  connections.c  connections.h  doxymain.h  kex.c  kex.h  logger.c  logger.h  qstp.c  qstp.h  satp.c  satp.h  satpcommon.h  server.c  server.h
Source/Server/: SATP Server.vcxproj  appsrv.c  appsrv.h
docs/: annotated.html  annotated_dup.js  classes.html  client_8h.html  client_8h.js  client_8h_source.html  connections_8h.html  connections_8h.js  connections_8h_source.html  dir_e669f2dbe370c85fafb6565895d91f2e.html  dir_e669f2dbe370c85fafb6565895d91f2e.js  doxygen_crawl.html  doxymain_8h_source.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  index.js  kex_8h_source.html  navtreedata.js  navtreeindex0.js  satp_8h.html  satp_8h.js  satp_8h_source.html  satpcommon_8h_source.html  server_8h.html  server_8h.js  server_8h_source.html  structclient__receiver__state.html  structqsmp__connection__state.html  structqsmp__keep__alive__state.html  structsatp__connection__state.html  structsatp__connection__state.js  structsatp__device__key.html  (+12 more)
docs/latex/: annotated.tex  client_8h.tex  client_8h_source.tex  connections_8h.tex  connections_8h_source.tex  doxymain_8h_source.tex  files.tex  (+19 more)
(+11 files in other folders)
